@@ -3,7 +3,9 @@
     使用该项目可以快速创建另外一个项目
 
 ## 使用方法
-    运行Main.java程序，输入你的项目名，很快对吧，哈哈
+    运行Main.java程序，输入你的项目名，创建新的应用
+    ServiceInit可以是新应用的启动类，加入JVM参数：--add-opens java.base/java.lang=ALL-UNNAMED
+    
 
 
 ## 技术准备
@@ -14,7 +16,6 @@
     xhoway-processor： 处理器层，各服务核心处理逻辑
     xhoway-util: 工具库
     xhoway-api: dubbo api
-    xhoway-provider: api服务提供
-    xhoway-web: restful api提供
+    xhoway-access:服务接入层，包括RPC和HTTP接入
 
 
